# DistributedSystems

lab1/: Makefile
lab1/manager/: .clang-format  .env  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp  static_config.yaml
lab1/manager/src/: crack_hash_handler.cpp  crack_hash_handler.hpp  hash_crack_handler.cpp  hash_crack_handler.hpp
lab1/manager/src/clients/: http_client.cpp  http_client.hpp
lab1/manager/src/components/: http_worker_connection.cpp  http_worker_connection.hpp  round_robin_distributor_component.hpp  task_scheduler_component.cpp  task_scheduler_component.hpp  workers_factory_component.cpp  workers_factory_component.hpp
lab1/manager/src/dto/: crack_hash_patch_status_request.cpp  crack_hash_patch_status_request.hpp  crack_hash_request.cpp  crack_hash_request.hpp  crack_hash_response.cpp  crack_hash_response.hpp  crack_hash_status_response.cpp  crack_hash_status_response.hpp  worker_answer.cpp  worker_answer.hpp
lab1/manager/src/handlers/: crack_hash_handler.cpp  crack_hash_handler.hpp  crack_hash_status_handler.cpp  crack_hash_status_handler.hpp  hash_status_handler.cpp  hash_status_handler.hpp  worker_answer_handler.cpp  worker_answer_handler.hpp
lab1/manager/src/models/: crack_request.hpp  sub_task.cpp  sub_task.hpp  task.cpp  task.hpp  worker.cpp  worker.hpp  worker_connection.hpp
lab1/manager/src/repositories/: requests_repository.hpp  requests_repository_in_memory.cpp  requests_repository_in_memory.hpp  tasks_repository.hpp  tasks_repository_in_memory.cpp  tasks_repository_in_memory.hpp
lab1/manager/src/services/: round_robin_distributor.hpp  task_distribution_policy.hpp  task_scheduler_base.cpp  task_scheduler_base.hpp
lab1/manager/testsuite/: conftest.py  test_crack_request.py  test_full_user_flow.py  test_handlers.py  test_hello.py  test_status.py
lab1/manager/unittests/: say_hello_test.cpp
lab1/worker/: .clang-format  CMakeLists.txt  CMakeUserPresets.json  Makefile  conanfile.py  docker-compose.yml  main.cpp  static_config.yaml
lab1/worker/benchmarks/: say_hello_bench.cpp
lab1/worker/src/clients/: http_client.cpp  http_client.hpp
lab1/worker/src/components/: brute_force_service_component.hpp  http_manager_connection.cpp  http_manager_connection.hpp  http_worker_connection.cpp  http_worker_connection.hpp  workers_factory_component.hpp
lab1/worker/src/dto/: worker_answer.cpp  worker_answer.hpp
lab1/worker/src/handlers/: crack_hash_handler.cpp  crack_hash_handler.hpp
lab1/worker/src/models/: sub_task.cpp  sub_task.hpp  task.cpp  task.hpp  worker_connection.hpp
lab1/worker/src/repositories/: requests_repository.hpp
lab1/worker/src/services/: bf_service.hpp  brute_force_service.cpp  brute_force_service.hpp  lexicographic_word_generator.cpp  lexicographic_word_generator.hpp
lab1/worker/testsuite/: test_hello.py
lab1/worker/unittests/: task_scheduler_test.cpp
